<resources>
    <string name="app_name">DEMOMovieDB</string>
    <string name="url_load_image">https://image.tmdb.org/t/p/w342</string>
    <string name="no_internet_connection">Turn ON Wi-Fi and try again</string>
    <string name="show_recommendations">Show Recommendations</string>
    <string name="hide_recommendations">Hide Recommendations</string>
    <string name="reconnect">Try to Reconnect</string>
    <string name="popular_shows">Popular Shows</string>
    <string name="most_popular_shows">Most Popular Shows</string>
    <string name="rated_shows">Rated Shows</string>
    <string name="best_rated_shows">Best Rated Shows</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="rated_movies">Rated Movies</string>
    <string name="best_rated_movies">Best Rated Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline_mode">OFFLINE MODE</string>
</resources>